# Il2CppRuntimeDumper

./: .gitignore  CMakeLists.txt  DummyIl2Cpp.h  Dumper.cpp  Il2CppFunctions.h  Il2CppRuntimeDumper.vcxproj  Il2CppRuntimeDumper.vcxproj.filters  README.md  SafeCall.h
include/: DummyIl2Cpp.hpp  Il2CppFunctions.hpp  Il2CppRuntimeDumper.h  Il2CppRuntimeDumper.hpp  SafeCall.hpp
src/: Dumper.cpp
